
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 long g_length ;
 long g_offset ;
 int g_string ;
 unsigned long get_phys_size () ;
 int info (char*,...) ;
 int phys_search (unsigned long,unsigned long,int ) ;

void handle_cmd_search() {
 unsigned long start = g_offset ? g_offset : 0;
 unsigned long end = g_length ? (start + g_length) : get_phys_size();
 info("[.] searching [%016lx, %016lx) for '%s':\n",
   start, end, g_string);
 phys_search(start, end, g_string);
 info("[+] done\n");
}
